# daytrading-risk-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic_usage.cpp
frontend/: index.html
include/broker/: BrokerResponse.h  IBrokerAdapter.h  MockBrokerAdapter.h
include/checklist/: ChecklistEvaluation.h  ChecklistGate.h  ChecklistItem.h  ChecklistResponse.h  ChecklistTemplate.h
include/domain/: Account.h  Instrument.h  Order.h  Side.h  TradeIntent.h
include/http/: HttpServer.h
include/journal/: ITradeJournal.h  InMemoryTradeJournal.h  SqliteTradeJournal.h
include/pipeline/: TradePipeline.h  TradeSubmissionResult.h
include/risk/: RiskManager.h
include/storage/: IAccountStore.h  IChecklistTemplateStore.h  InMemoryAccountStore.h  InMemoryChecklistTemplateStore.h  SqliteAccountStore.h  SqliteChecklistTemplateStore.h
scripts/: convert_dbn_to_json.py
src/: Account.cpp  ChecklistGate.cpp  ChecklistItem.cpp  ChecklistTemplate.cpp  HttpServer.cpp  InMemoryAccountStore.cpp  InMemoryChecklistTemplateStore.cpp  InMemoryTradeJournal.cpp  Instrument.cpp  MockBrokerAdapter.cpp  Order.cpp  RiskManager.cpp  SqliteAccountStore.cpp  SqliteChecklistTemplateStore.cpp  SqliteTradeJournal.cpp  TradeIntent.cpp  TradePipeline.cpp  main_http.cpp
tests/: test_account.cpp  test_checklist_gate.cpp  test_checklist_item.cpp  test_checklist_template.cpp  test_in_memory_account_store.cpp  test_in_memory_checklist_template_store.cpp  test_in_memory_journal.cpp  test_instrument.cpp  test_mock_broker_adapter.cpp  test_order.cpp  test_risk_manager.cpp  test_sqlite_account_store.cpp  test_sqlite_checklist_template_store.cpp  test_sqlite_journal.cpp  test_trade_intent.cpp  test_trade_pipeline.cpp
web/: package-lock.json  package.json  tsconfig.app.json
web/public/data/nq/: 2025-04-04.json  2025-04-09.json  2025-04-14.json  2025-04-16.json  2025-05-12.json  2025-05-15.json  2025-05-21.json  2025-05-30.json  2025-06-18.json  2025-06-24.json  2025-07-02.json  2025-07-03.json  2025-07-09.json  2025-07-15.json  2025-07-17.json  2025-07-18.json  2025-07-21.json  2025-07-23.json  2025-07-24.json  2025-07-28.json  2025-07-29.json  2025-07-30.json  2025-07-31.json  2025-08-01.json  2025-08-04.json  2025-08-05.json  2025-08-06.json  2025-08-07.json  2025-08-08.json  2025-08-11.json  2025-08-12.json  2025-08-13.json  2025-08-14.json  2025-08-15.json  2025-08-18.json  2025-08-19.json  2025-08-20.json  2025-08-22.json  2025-08-25.json  2025-08-26.json  (+174 more)
web/src/: App.tsx
web/src/components/: AccountPanel.tsx  ActiveTradePanel.tsx  ChecklistPanel.tsx  LightweightChart.tsx  RecentTrades.tsx  ReplayController.tsx  SubmitBar.tsx  TradeForm.tsx  TradingViewChart.tsx
web/src/lib/: aggregation.ts  api.ts
web/src/types/: account.ts  chart.ts  trade.ts
